--- a/pc-accessories/package.json
+++ b/pc-accessories/package.json
@@ -16,10 +16,12 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "next-auth": "^4.22.0",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
