--- a/pc-accessories/package.json
+++ b/pc-accessories/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.2.32",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.12.0",
+    "@types/negotiator": "^0.6.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -19,6 +21,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "negotiator": "^0.6.3",
     "next": "13.3.0",
     "next-auth": "^4.22.0",
     "query-string": "^8.1.0",
@@ -27,6 +30,7 @@
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "server-only": "^0.0.1",
     "typescript": "5.0.4",
     "zustand": "^4.3.7"
   },
