--- a/pc-accessories/package.json
+++ b/pc-accessories/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "aws-sdk": "^2.1395.0",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "date-fns": "^2.30.0",
