--- a/pc-accessories/.env.example
+++ b/pc-accessories/.env.example
@@ -7,3 +7,10 @@ DATABASE_URL=
 # Auth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+# AWS
+NEXT_PUBLIC_AWS_S3_BUCKET_NAME=
+NEXT_PUBLIC_AWS_S3_REGION=
+NEXT_PUBLIC_AWS_S3_ACCESS_KEY=
+NEXT_PUBLIC_AWS_S3_SECRET=
+NEXT_PUBLIC_AWS_S3_SIGNATURE_VERSION=
